백준 단게별 2 조건문

--- a/A02_BAEKJOON/B01_Step/_01-10/C01_입출력과_사칙연산.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C01_입출력과_사칙연산.ipynb
@@ -19,7 +19,155 @@
    "outputs": [],
    "source": [
     "# 2. 1000 A + B\n",
-    "a = input()\n"
+    "a, b = map(int, input().split())\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20589e70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. 1001 A - B\n",
+    "a, b = map(int, input().split())\n",
+    "print(a-b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2b0fb76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. 10998 A X B\n",
+    "a, b = map(int, input().split())\n",
+    "print(a*b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7de1b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. 1008 A/B\n",
+    "a, b = map(int, input().split())\n",
+    "print(a/b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27004f09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. 10869 사칙연산 \n",
+    "a, b = map(int, input().split())\n",
+    "print(f\"{a+b}\\n{a-b}\\n{a*b}\\n{a//b}\\n{a%b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c03d154b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. 10926 ??!\n",
+    "s = input()\n",
+    "print(s + \"??!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbf05ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8. 18108 1998년 생인 내가 태국에서 2541년생?\n",
+    "a = int(input())\n",
+    "print(a-(2541-1998))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06dbe085",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9. 10430 나머지\n",
+    "\n",
+    "a, b, c = map(int, input().split())\n",
+    "print( (a+b)%c )\n",
+    "print( ( (a%c) + (b%c) )%c )\n",
+    "print( (a*b)%c )\n",
+    "print( ( (a%c) * (b%c) )%c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e76fe00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10. 2588 곱셈\n",
+    "a = int(input())\n",
+    "b = input()\n",
+    "\n",
+    "print(a * int(b[2]))\n",
+    "print(a * int(b[1]))\n",
+    "print(a * int(b[0]))\n",
+    "print(a * int(b))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd806b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 11. 11382 꼬마 정민\n",
+    "a, b, c = map(int,input().split())\n",
+    "\n",
+    "print(a + b + c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12595b62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 12. 10171 고양이\n",
+    "print(r\"\"\"\\    /\\\n",
+    " )  ( ')\n",
+    "(  /  )\n",
+    " \\(__)|\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1a9ea6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 13. 10172 개\n",
+    "print(r'''|\\_/|\n",
+    "|q p|   /}\n",
+    "( 0 )\"\"\"\\\n",
+    "|\"^\"`    |\n",
+    "||_/=\\\\__|''')"
    ]
   }
  ],
