백준 단계별 3 반복문 진행중..

--- a/A02_BAEKJOON/B01_Step/_01-10/C02_조건문.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C02_조건문.ipynb
@@ -5,15 +5,7 @@
    "execution_count": null,
    "id": "95d35788",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. 1330 두 수 비교하기\n",
     "a, b = map(int, input().split())\n",
@@ -32,7 +24,137 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. 9498 시험성적\n"
+    "# 2. 9498 시험성적\n",
+    "a = int(input())\n",
+    "score = \"F\"\n",
+    "if a >=90:\n",
+    "    score = \"A\"\n",
+    "elif a >= 80:\n",
+    "    score = \"B\"\n",
+    "elif a >= 70:\n",
+    "    score = \"C\"\n",
+    "elif a >= 60:\n",
+    "    score = \"D\"\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fa7e7e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. 2753 윤년\n",
+    "a = int(input())\n",
+    "print(int( a%4==0 and a%100 != 0 or a%400 == 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f34c99fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. 14681 사분면 고르기\n",
+    "x = int(input())\n",
+    "y = int(input())\n",
+    "\n",
+    "if x > 0:\n",
+    "    if y > 0:\n",
+    "        print(1)\n",
+    "    else:\n",
+    "        print(4)\n",
+    "else:\n",
+    "    if y > 0:\n",
+    "        print(2)\n",
+    "    else:\n",
+    "        print(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb58970f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. 2884 IQ 검사\n",
+    "from datetime import datetime, timedelta\n",
+    "a, b = map(int, input().split())\n",
+    "t = datetime(2025,1,1, a, b) - timedelta(minutes=45)\n",
+    "print(t.hour, t.minute)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "901cf9df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. 2884 IQ 검사\n",
+    "a, b = map(int, input().split())\n",
+    "\n",
+    "if b >= 45:\n",
+    "    print(a, b-45)\n",
+    "\n",
+    "else:\n",
+    "    if a != 0:\n",
+    "        print(a-1, b + (60-45))\n",
+    "    else:\n",
+    "        print(23, b + (60-45))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2d27b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. 2525 오븐시계\n",
+    "h, m = map(int, input().split())\n",
+    "t = int(input())\n",
+    "\n",
+    "th, tm = [t//60, t%60]\n",
+    "\n",
+    "totalh = (h + th) % 24\n",
+    "totalm = m + tm\n",
+    "\n",
+    "if totalm < 60:\n",
+    "    print(totalh, totalm)\n",
+    "else:\n",
+    "    if totalh == 23:\n",
+    "        print(0, totalm - 60)\n",
+    "    else:\n",
+    "        print(totalh + 1, totalm - 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48be4da2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. 2480 주사위 세개\n",
+    "a, b, c = map(int, input().split())\n",
+    "\n",
+    "if a==b and b==c:\n",
+    "    print(10000 + a*1000)\n",
+    "elif a==b or a==c:\n",
+    "    print(1000 + a*100)\n",
+    "elif b==c:\n",
+    "    print(1000 + b*100)\n",
+    "else:\n",
+    "    largest = a\n",
+    "    if b > a:\n",
+    "        largest = b\n",
+    "    if c > largest:\n",
+    "        largest = c\n",
+    "    print(largest*100)\n"
    ]
   }
  ],
