--- a/A02_BAEKJOON/B01_Step/_01-10/C03_반복문.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C03_반복문.ipynb
@@ -5,25 +5,9 @@
    "execution_count": null,
    "id": "51145c86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 * 1 = 2\n",
-      "3 * 2 = 4\n",
-      "3 * 3 = 6\n",
-      "3 * 4 = 8\n",
-      "3 * 5 = 10\n",
-      "3 * 6 = 12\n",
-      "3 * 7 = 14\n",
-      "3 * 8 = 16\n",
-      "3 * 9 = 18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 1 2739 구구단\n",
+    "# 1. 2739 구구단\n",
     "\n",
     "a = int(input())\n",
     "for i in range(1, 10):\n",
@@ -37,7 +21,252 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. "
+    "# 2. 10950 A+B - 3\n",
+    "t = int(input())\n",
+    "\n",
+    "for _ in range(t):\n",
+    "    a, b = map(int, input().split())\n",
+    "    print(a + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22250eb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. 8393 합\n",
+    "t = int(input())\n",
+    "\n",
+    "sum = 0\n",
+    "for i in range(1, t + 1):\n",
+    "    sum += i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc943a48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. 25340 영수증\n",
+    "\n",
+    "from io import StringIO\n",
+    "input = StringIO(\"\"\"260000\n",
+    "4\n",
+    "20000 5\n",
+    "30000 2\n",
+    "10000 6\n",
+    "5000 8\"\"\").readline\n",
+    "\n",
+    "total = int(input())\n",
+    "count = int(input())\n",
+    "\n",
+    "for _ in range(count):\n",
+    "    price, num = map(int, input().split())\n",
+    "    total -= price*num\n",
+    "\n",
+    "print(\"Yes\" if total==0 else \"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60e0306e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. 25314 코딩은 체육과목 입니다. \n",
+    "a = int(input())\n",
+    "answer = \"int\"\n",
+    "for _ in range(a//4):\n",
+    "    answer = \"long \" + answer\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "683b6858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. 155552 빠른 A+B\n",
+    "from io import StringIO\n",
+    "inputs = StringIO(\"\"\"5\n",
+    "1 1\n",
+    "12 34\n",
+    "5 500\n",
+    "40 60\n",
+    "1000 1000\n",
+    "\"\"\")\n",
+    "\n",
+    "from sys import stdin\n",
+    "stdin = inputs\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "n = int(rl().rstrip())\n",
+    "for _ in range(n):\n",
+    "    print(sum(map(int, rl().split())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "147f6ede",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. 11021 A+B -7\n",
+    "\n",
+    "from sys import stdin\n",
+    "from io import StringIO\n",
+    "stdin = StringIO('''5\n",
+    "1 1\n",
+    "2 3\n",
+    "3 4\n",
+    "9 8\n",
+    "5 2''')\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "n = int(rl())\n",
+    "for i in range(n):\n",
+    "    print(f\"Case #{i+1}:\", sum(map(int, rl().split())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c1d47bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8. 11022 A+B - 8\n",
+    "\n",
+    "from sys import stdin\n",
+    "from io import StringIO\n",
+    "stdin = StringIO(\"\"\"5\n",
+    "1 1\n",
+    "2 3\n",
+    "3 4\n",
+    "9 8\n",
+    "5 2\"\"\")\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "n = int(rl())\n",
+    "for i in range(n):\n",
+    "    a, b = map(int, rl().split())\n",
+    "    print(f\"Case #{i+1}: {a} + {b} = {a+b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56d1f06e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9. 2438 별 찍기 - 1\n",
+    "\n",
+    "n = int(input())\n",
+    "for i in range(n):\n",
+    "    print(\"*\" * (i+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8f7fc69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10. 2439 별 찍기 - 2\n",
+    "\n",
+    "n = int(input())\n",
+    "for i in range(n):\n",
+    "    print(\" \" * (n - i - 1) + \"*\" * (i + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "76118504",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "7\n",
+      "17\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11. A+B - 5\n",
+    "\n",
+    "from sys import stdin\n",
+    "from io import StringIO\n",
+    "\n",
+    "stdin = StringIO(\"\"\"1 1\n",
+    "2 3\n",
+    "3 4\n",
+    "9 8\n",
+    "5 2\n",
+    "0 0\"\"\")\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "\n",
+    "while True:\n",
+    "    a , b = map(int, rl().split())\n",
+    "    if a == b == 0 :\n",
+    "        break\n",
+    "    print(a+b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d9b355b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "7\n",
+      "17\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 12. 10951 A+B - 4\n",
+    "\n",
+    "from sys import stdin\n",
+    "from io import StringIO\n",
+    "stdin = StringIO('''1 1\n",
+    "2 3\n",
+    "3 4\n",
+    "9 8\n",
+    "5 2''')\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "\n",
+    "while True:\n",
+    "    line = rl()\n",
+    "    if not line:\n",
+    "        break\n",
+    "    print(sum(map(int, line.split())))"
    ]
   }
  ],
