--- a/A02_BAEKJOON/B01_Step/_01-10/C04_1차원_배열.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C04_1차원_배열.ipynb
@@ -178,10 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5ebea0f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1 4 2 5\n"
+     ]
+    }
+   ],
    "source": [
     "# 6\t10813\t공 바꾸기\n",
     "\n",
@@ -192,49 +200,174 @@
     "2 2''')\n",
     "\n",
     "rl = stdin.readline\n",
+    "length, trying = map(int, rl().split())\n",
     "\n",
-    "buckets, trying = map(int, rl().split())\n",
-    "\n"
+    "bucket = list(range(1, length + 1))\n",
+    "for _ in range(trying):\n",
+    "    a, b = map(int, rl().split())\n",
+    "    bucket[a-1], bucket[b-1] = bucket[b-1], bucket[a-1]\n",
+    "\n",
+    "print(\" \".join(map(str, bucket)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "a8511975",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7\t5597\t과제 안 내신 분..?"
+    "# 7\t5597\t과제 안 내신 분..?\n",
+    "\n",
+    "stdin = StringIO('''3\n",
+    "1\n",
+    "4\n",
+    "5\n",
+    "7\n",
+    "9\n",
+    "6\n",
+    "10\n",
+    "11\n",
+    "12\n",
+    "13\n",
+    "14\n",
+    "15\n",
+    "16\n",
+    "17\n",
+    "18\n",
+    "19\n",
+    "20\n",
+    "21\n",
+    "22\n",
+    "23\n",
+    "24\n",
+    "25\n",
+    "26\n",
+    "27\n",
+    "28\n",
+    "29\n",
+    "30''')\n",
+    "\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "students = list(range(1, 31))\n",
+    "\n",
+    "for _ in range(28):\n",
+    "    students.remove(int(rl()))\n",
+    "\n",
+    "print(students[0])\n",
+    "print(students[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4e7416b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8\t3052\t나머지"
+    "# 8\t3052\t나머지\n",
+    "\n",
+    "stdin = StringIO('''39\n",
+    "40\n",
+    "41\n",
+    "42\n",
+    "43\n",
+    "44\n",
+    "82\n",
+    "83\n",
+    "84\n",
+    "85''')\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "result = []\n",
+    "for _ in range(10):\n",
+    "    val = int(rl())%42\n",
+    "    if not val in result:\n",
+    "        result.append(val)\n",
+    "print(len(result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "8c32ec98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 1 2 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 9\t10811\t바구니 뒤집기"
+    "# 9\t10811\t바구니 뒤집기\n",
+    "\n",
+    "stdin = StringIO('''5 4\n",
+    "1 2\n",
+    "3 4\n",
+    "1 4\n",
+    "2 2''')\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "\n",
+    "length, trying = map(int, rl().split())\n",
+    "buckets = list(range(1, length + 1))\n",
+    "\n",
+    "for _ in range(trying):\n",
+    "    a, b = map(int, rl().split())\n",
+    "    buckets[a-1:b] = buckets[a-1:b][::-1]\n",
+    "\n",
+    "print(\" \".join(map(str, buckets)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "46bb51a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 10\t1546\t평균"
+    "# 10\t1546\t평균\n",
+    "\n",
+    "stdin = StringIO('''3\n",
+    "40 80 60''')\n",
+    "\n",
+    "rl = stdin.readline\n",
+    "\n",
+    "n = int(rl())\n",
+    "\n",
+    "score = list(map(int, rl().split()))\n",
+    "max_val = max(score)\n",
+    "new_score = [ (val/max_val)*100 for val in score]\n",
+    "print(sum(new_score)/n)"
    ]
   }
  ],
