--- a/A02_BAEKJOON/B01_Step/_01-10/C05_문자열.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C05_문자열.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c28611ab",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "837ba9f2",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "1133e5e1",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "f815e208",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "e9f4ab6d",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "12427f20",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "cb2276ca",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "46005ffe",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "057279d5",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "38223eda",
    "metadata": {},
    "outputs": [
@@ -258,35 +258,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "36\n"
      ]
     }
    ],
    "source": [
     "# 10\t5622\t다이얼\n",
-    "\n",
     "stdin = StringIO('''UNUCIC''')\n",
     "\n",
     "rl = stdin.readline\n",
     "word = rl().rstrip()\n",
-    "sum = 0\n",
+    "\n",
+    "dial_groups = [\n",
+    "    'ABC', 'DEF', 'GHI', 'JKL', 'MNO', 'PQRS', 'TUV', 'WXYZ'\n",
+    "]\n",
+    "total_time=0\n",
+    "\n",
     "for w in word:\n",
-    "    if w == 'Z':\n",
-    "        sum += 10\n",
-    "    elif 'R'< w <'Z':\n",
-    "        num = ord(w)-ord('A') - 1\n",
-    "        num = (num // 3) + 3\n",
-    "        sum += num\n",
-    "    else:\n",
-    "        num = ord(w)-ord('A')\n",
-    "        num = (num // 3) + 3\n",
-    "        sum += num\n",
-    "print(sum)"
+    "    for group in dial_groups:\n",
+    "        if w in group:\n",
+    "            total_time += dial_groups.index(group) + 3\n",
+    "\n",
+    "print(total_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "id": "5a57a7b1",
    "metadata": {},
    "outputs": [
@@ -320,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
