--- a/A02_BAEKJOON/B01_Step/_01-10/C08_수학_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C08_수학_1.ipynb
@@ -2,12 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e7854fca",
+   "execution_count": 1,
+   "id": "43ad6f7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1\t2745\t진법 변환"
+    "import sys\n",
+    "from io import StringIO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e7854fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60466175\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\t2745\t진법 변환\n",
+    "\n",
+    "sys.stdin = StringIO('''ZZZZZ 36''')\n",
+    "\n",
+    "import sys\n",
+    "a, b = sys.stdin.readline().split()\n",
+    "base = int(b)\n",
+    "\n",
+    "sum = 0\n",
+    "for i, digit in enumerate(reversed(a)):\n",
+    "    if digit.isdigit():\n",
+    "        value = int(digit)\n",
+    "    else:\n",
+    "        value = ord(digit) - ord('A') + 10\n",
+    "    sum += value * (base**i)\n",
+    "print(sum)"
    ]
   },
   {
@@ -15,19 +49,71 @@
    "execution_count": null,
    "id": "a22a732f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZZZZZ\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2\t11005\t진법 변환 2"
+    "# 2\t11005\t진법 변환 2\n",
+    "\n",
+    "sys.stdin = StringIO('''60466175 36''')\n",
+    "\n",
+    "import sys\n",
+    "a, b = map(int, sys.stdin.readline().split())\n",
+    "\n",
+    "answer = []\n",
+    "while True:\n",
+    "    digit = a % b # a, b = divmod(a, b)\n",
+    "    if digit >= 10:\n",
+    "        digit = chr(digit + ord('Z') - 35)\n",
+    "    else:\n",
+    "        digit = str(digit)\n",
+    "    answer.append(digit)\n",
+    "    a = a//b\n",
+    "    if a == 0:\n",
+    "        break\n",
+    "print(\"\".join(reversed(answer)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "31554415",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2 0 4\n",
+      "1 0 0 0\n",
+      "7 1 1 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t2720\t세탁소 사장 동혁"
+    "# 3\t2720\t세탁소 사장 동혁\n",
+    "sys.stdin = StringIO('''3\n",
+    "124\n",
+    "25\n",
+    "194''')\n",
+    "\n",
+    "import sys\n",
+    "rl = sys.stdin.readline\n",
+    "\n",
+    "n = int(rl())\n",
+    "for _ in range(n):\n",
+    "    payback = int(rl())\n",
+    "    answer = []\n",
+    "    for coin in [25, 10, 5, 1]:\n",
+    "        count, payback = divmod(payback, coin)\n",
+    "        answer.append(str(count))\n",
+    "    print(\" \".join(answer))"
    ]
   },
   {
@@ -35,9 +121,33 @@
    "execution_count": null,
    "id": "a4f7ae4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1089\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n0   1 + 1 \\n1   2 + 1 => \\n2   4 + 1\\nn   n**2 + 1\\n\\n'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 4\t2903\t중앙 이동 알고리즘"
+    "# 4\t2903\t중앙 이동 알고리즘\n",
+    "\n",
+    "sys.stdin = StringIO('''5''')\n",
+    "\n",
+    "import sys\n",
+    "trying = int(sys.stdin.readline())\n",
+    "print((2**trying + 1)**2)"
    ]
   },
   {
@@ -45,9 +155,30 @@
    "execution_count": null,
    "id": "86f0b5db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t2292\t벌집"
+    "# 5\t2292\t벌집\n",
+    "\n",
+    "sys.stdin = StringIO('''13''')\n",
+    "\n",
+    "import sys\n",
+    "n = int(sys.stdin.readline())\n",
+    "\n",
+    "layer = 1\n",
+    "range_max = 1\n",
+    "while n > range_max:\n",
+    "    range_max += 6 * layer\n",
+    "    layer += 1\n",
+    "\n",
+    "print(layer)\n"
    ]
   },
   {
@@ -55,9 +186,59 @@
    "execution_count": null,
    "id": "a42add85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n1 / n 은 몇번째 인가요? \\n\\n1   1       \\n2   2       +1\\n3   4       +2\\n4   7       +3\\n5   11      +4\\n6   16      +5\\n\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 6\t1193\t분수찾기"
+    "# 6\t1193\t분수찾기\n",
+    "sys.stdin = StringIO('''14''')\n",
+    "\n",
+    "import sys\n",
+    "n = int(sys.stdin.readline())\n",
+    "\n",
+    "round = 1\n",
+    "while True:\n",
+    "    temp = n - round\n",
+    "    if temp <= 0:\n",
+    "        break\n",
+    "    n = temp\n",
+    "    round += 1\n",
+    "\n",
+    "if round % 2 == 0:\n",
+    "    print(f\"{n}/{round + 1-n} \")\n",
+    "else:\n",
+    "    print(f\"{round + 1 - n}/{n}\")\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "1 / n 은 몇번째 인가요? \n",
+    "\n",
+    "1   1       \n",
+    "2   2       +1\n",
+    "3   4       +2\n",
+    "4   7       +3\n",
+    "5   11      +4\n",
+    "6   16      +5\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''"
    ]
   },
   {
@@ -72,8 +253,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
