약수, 배수, 소수

--- a/A02_BAEKJOON/B01_Step/_01-10/C09_약수_배수_소수_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C09_약수_배수_소수_1.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "from io import StringIO\n"
+    "from io import StringIO"
    ]
   },
   {
@@ -79,12 +79,8 @@
     "            print(div)\n",
     "            break\n",
     "        answers.append(div)\n",
-    "else: \n",
-    "    print('0')\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "else:\n",
+    "    print('0')"
    ]
   },
   {
@@ -92,19 +88,83 @@
    "execution_count": null,
    "id": "3d932d8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 = 1 + 2 + 3\n",
+      "12 is NOT perfect.\n",
+      "28 = 1 + 2 + 4 + 7 + 14\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t9506\t약수들의 합"
+    "# 3\t9506\t약수들의 합\n",
+    "\n",
+    "sys.stdin = StringIO('''6\n",
+    "12\n",
+    "28\n",
+    "-1''')\n",
+    "\n",
+    "import sys\n",
+    "from math import sqrt\n",
+    "rl = sys.stdin.readline\n",
+    "\n",
+    "while True:\n",
+    "    num = int(rl())\n",
+    "    if num == -1:\n",
+    "        break\n",
+    "    \n",
+    "    divs = [1]\n",
+    "    for d in range(2, int(sqrt(num))+1):\n",
+    "        if num % d == 0:\n",
+    "            if d**2 == num:\n",
+    "                divs.append(d)\n",
+    "            else:\n",
+    "                divs.append(d)\n",
+    "                divs.append(num//d)\n",
+    "    if sum(divs) == num:\n",
+    "        divs.sort()\n",
+    "        print(num, \"=\", \" + \".join(map(str, divs)))\n",
+    "    else:\n",
+    "        print(num, \"is NOT perfect.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "7e5649c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t1978\t소수 찾기"
+    "# 4\t1978\t소수 찾기\n",
+    "sys.stdin = StringIO('''4\n",
+    "1 3 5 7''')\n",
+    "\n",
+    "import sys\n",
+    "from math import sqrt\n",
+    "rl = sys.stdin.readline\n",
+    "rl()\n",
+    "\n",
+    "nums = list(map(int, rl().split()))\n",
+    "answer = 0\n",
+    "for num in nums:\n",
+    "    if num != 1:\n",
+    "        for div in range(2, int(sqrt(num)) + 1):\n",
+    "            if num%div == 0:\n",
+    "                break\n",
+    "        else:\n",
+    "            answer += 1\n",
+    "print(answer)"
    ]
   },
   {
@@ -112,9 +172,31 @@
    "execution_count": null,
    "id": "3c350870",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t2581\t소수"
+    "# 5\t2581\t소수\n",
+    "sys.stdin = StringIO('''60\n",
+    "100''')\n",
+    "\n",
+    "import sys\n",
+    "from math import sqrt\n",
+    "\n",
+    "rl = sys.stdin.readline\n",
+    "\n",
+    "min = int(rl())\n",
+    "max = int(rl())\n",
+    "\n",
+    "nums = list(range(min, max +1))\n",
+    "\n",
+    "print(nums)"
    ]
   },
   {
@@ -130,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
