약수,배수,소수

--- a/A02_BAEKJOON/B01_Step/_01-10/C08_수학_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C08_수학_1.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "a42add85",
    "metadata": {},
    "outputs": [
@@ -193,16 +193,6 @@
      "text": [
       "2/4\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\n1 / n 은 몇번째 인가요? \\n\\n1   1       \\n2   2       +1\\n3   4       +2\\n4   7       +3\\n5   11      +4\\n6   16      +5\\n\\n\\n\\n'"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -223,32 +213,34 @@
     "if round % 2 == 0:\n",
     "    print(f\"{n}/{round + 1-n} \")\n",
     "else:\n",
-    "    print(f\"{round + 1 - n}/{n}\")\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "1 / n 은 몇번째 인가요? \n",
-    "\n",
-    "1   1       \n",
-    "2   2       +1\n",
-    "3   4       +2\n",
-    "4   7       +3\n",
-    "5   11      +4\n",
-    "6   16      +5\n",
-    "\n",
-    "\n",
-    "\n",
-    "'''"
+    "    print(f\"{round + 1 - n}/{n}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "f5d3a7e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7\t2869\t달팽이는 올라가고 싶다"
+    "# 7\t2869\t달팽이는 올라가고 싶다\n",
+    "sys.stdin = StringIO('''5 1 6''')\n",
+    "\n",
+    "import sys\n",
+    "import math\n",
+    "a, b, v = map(int,sys.stdin.readline().split())\n",
+    "\n",
+    "days = math.ceil((v - a) / (a - b)) + 1\n",
+    "print(days)\n",
+    "\n"
    ]
   }
  ],
