--- a/A02_BAEKJOON/B01_Step/_01-10/C09_약수_배수_소수_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C09_약수_배수_소수_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "08c91dca",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4fe437ed",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "56c91088",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3d932d8f",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "7e5649c4",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "3c350870",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n"
+      "620\n",
+      "61\n"
      ]
     }
    ],
@@ -187,32 +188,76 @@
     "100''')\n",
     "\n",
     "import sys\n",
-    "from math import sqrt\n",
+    "from math import isqrt\n",
     "\n",
     "rl = sys.stdin.readline\n",
     "\n",
-    "min = int(rl())\n",
-    "max = int(rl())\n",
+    "start = int(rl())\n",
+    "end = int(rl())\n",
     "\n",
-    "nums = list(range(min, max +1))\n",
+    "prime_flags = [True] * (end + 1)\n",
+    "prime_flags[0] = prime_flags[1] = False\n",
     "\n",
-    "print(nums)"
+    "for i in range(2, isqrt(end) + 1):\n",
+    "    if prime_flags[i]:\n",
+    "        for np in range(i*i, end + 1, i):\n",
+    "            prime_flags[np] = False\n",
+    "\n",
+    "primes = [num for num in range(start, end + 1) if prime_flags[num]]\n",
+    "\n",
+    "if primes:\n",
+    "    print(sum(primes))\n",
+    "    print(primes[0])\n",
+    "else:\n",
+    "    print(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "aea1d7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "103\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t11653\t소인수분해\n",
+    "sys.stdin = StringIO('''9991''')\n",
+    "\n",
+    "import sys\n",
+    "from math import isqrt\n",
+    "\n",
+    "num = int(sys.stdin.readline())\n",
+    "for i in range(2, isqrt(num) + 1):\n",
+    "    while num % i == 0 : \n",
+    "        print(i)\n",
+    "        num //= i\n",
+    "    if num == 1:\n",
+    "        break\n",
+    "\n",
+    "if num > 1:\n",
+    "    print(num)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aea1d7f7",
+   "id": "c5351eab",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 6\t11653\t소인수분해"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
