시간복잡도

--- a/A02_BAEKJOON/B01_Step/_11-20/C11_시간 복잡도.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C11_시간 복잡도.ipynb
@@ -161,7 +161,9 @@
    "outputs": [],
    "source": [
     "# 7\t24313\t 알고리즘 수업 - 점근적 표기 1\n",
-    "\n"
+    "input = StringIO('''7 7\n",
+    "8\n",
+    "10''').readline\n"
    ]
   }
  ],
