백준 부루트 포스 BFS

--- a/A02_BAEKJOON/B01_Step/_11-20/C11_시간 복잡도.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C11_시간 복잡도.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "03fdef79",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9de40b77",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "22f880db",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a2af48be",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a94167e6",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dccc4283",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "343\n",
-      "2\n"
+      "3\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5feaac80",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "35\n",
+      "3\n"
      ]
     }
    ],
@@ -158,12 +159,33 @@
    "execution_count": null,
    "id": "b9f67dde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# 7\t24313\t 알고리즘 수업 - 점근적 표기 1\n",
     "input = StringIO('''7 7\n",
     "8\n",
-    "10''').readline\n"
+    "10''').readline\n",
+    "\n",
+    "a1, a0 = map(int, input().split())\n",
+    "c = int(input())\n",
+    "n0 = int(input())\n",
+    "\n",
+    "for n in range(n0, n0+100):\n",
+    "    fn = a1*n + a0\n",
+    "    gn = c*n\n",
+    "    if not fn <= gn:\n",
+    "        print(0)\n",
+    "        break\n",
+    "else:\n",
+    "    print(1)"
    ]
   }
  ],
