백준 부루트 포스 BFS

--- a/A02_BAEKJOON/B01_Step/_11-20/C12_부루트_포스.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C12_부루트_포스.ipynb
@@ -49,12 +49,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "0e42bfdd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2\t2231\t 분해합"
+    "# 2\t2231\t 분해합\n",
+    "input = StringIO('''3''').readline\n",
+    "\n",
+    "num = input()\n",
+    "length = (len(num))\n",
+    "num = int(num)\n",
+    "if length > 2:\n",
+    "    start = num-(9*length)\n",
+    "else:\n",
+    "    start = 0\n",
+    "for i in range(start, num):\n",
+    "    digits = [int(digit) for digit in str(i)]\n",
+    "    if i + sum(digits) == num:\n",
+    "        print(i)\n",
+    "        break\n",
+    "else:\n",
+    "    print(0)\n"
    ]
   },
   {
@@ -62,19 +86,98 @@
    "execution_count": null,
    "id": "e208aa86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t19532\t 수학은 비대면강의입니다"
+    "# 3\t19532\t 수학은 비대면강의입니다\n",
+    "input = StringIO('''2 5 8 3 -4 -11''').readline\n",
+    "\n",
+    "a, b, c, d, e, f = map(int, input().split())\n",
+    "nums = list(range(-999, 999 + 1))\n",
+    "for x in nums:\n",
+    "    for y in nums:\n",
+    "        if a*x + b*y == c and d*x + e*y == f:\n",
+    "            print(x, y)\n",
+    "            break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "de561888",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t1018\t 체스판 다시 칠하기"
+    "# 4\t1018\t 체스판 다시 칠하기\n",
+    "\n",
+    "input = StringIO('''11 12\n",
+    "BWWBWWBWWBWW\n",
+    "BWWBWBBWWBWW\n",
+    "WBWWBWBBWWBW\n",
+    "BWWBWBBWWBWW\n",
+    "WBWWBWBBWWBW\n",
+    "BWWBWBBWWBWW\n",
+    "WBWWBWBBWWBW\n",
+    "BWWBWBWWWBWW\n",
+    "WBWWBWBBWWBW\n",
+    "BWWBWBBWWBWW\n",
+    "WBWWBWBBWWBW''').readline\n",
+    "\n",
+    "heigh, width = map(int, input().split())\n",
+    "board = [[w == 'B' for w in input().rstrip()] for _ in range(heigh)]\n",
+    "\n",
+    "\n",
+    "def check_col8(start_bool, col8):\n",
+    "    counter = 0\n",
+    "    for b in col8:\n",
+    "        if start_bool != b:\n",
+    "            counter += 1\n",
+    "        start_bool = not start_bool\n",
+    "    return counter\n",
+    "\n",
+    "\n",
+    "def check_row8_col8(row8_col8, minvalue):\n",
+    "    total_counter = [minvalue]\n",
+    "    for start in [True, False]:\n",
+    "        row_counter = 0\n",
+    "        for row8 in row8_col8:\n",
+    "            row_counter += check_col8(start, row8)\n",
+    "            if row_counter >= minvalue:\n",
+    "                break\n",
+    "            start = not start\n",
+    "        total_counter.append(row_counter)\n",
+    "    return min(total_counter)\n",
+    "\n",
+    "\n",
+    "def extract_col8_row8(start_row, start_col, row_col_board):\n",
+    "    row8_col8 = []\n",
+    "    for row in row_col_board[start_row: start_row + 8]:\n",
+    "        row8_col8.append(row[start_col: start_col + 8])\n",
+    "    return row8_col8\n",
+    "\n",
+    "\n",
+    "minvalue = 64\n",
+    "for row_idx in range(0, heigh - 8 + 1):\n",
+    "    for col_idx in range(0, width - 8 + 1):\n",
+    "        check_88board = extract_col8_row8(row_idx, col_idx, board)\n",
+    "        minvalue = check_row8_col8(check_88board, minvalue)\n",
+    "\n",
+    "print(minvalue)"
    ]
   },
   {
