--- a/A02_BAEKJOON/B01_Step/_11-20/C12_부루트_포스.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C12_부루트_포스.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "24a5cd5e",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "0e42bfdd",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e208aa86",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "id": "de561888",
    "metadata": {},
    "outputs": [
@@ -182,12 +182,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "41837d0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "166699\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t1436\t 영화감독 숌"
+    "# 5\t1436\t 영화감독 숌\n",
+    "\n",
+    "input = StringIO('''500''').readline\n",
+    "\n",
+    "num = int(input())\n",
+    "death = 666\n",
+    "while num > 0 :\n",
+    "    if \"666\" in str(death):\n",
+    "        num -= 1\n",
+    "    death += 1\n",
+    "\n",
+    "print(death - 1)"
    ]
   },
   {
@@ -195,15 +214,34 @@
    "execution_count": null,
    "id": "dcbe067e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t2839\t 설탕 배달"
+    "# 6\t2839\t 설탕 배달\n",
+    "input = StringIO('''11''').readline\n",
+    "\n",
+    "num = int(input())\n",
+    "for c in range(num//5, -1, -1):\n",
+    "    rest = num - c*5\n",
+    "    if rest % 3 == 0:\n",
+    "        print(c + rest//3)\n",
+    "        break\n",
+    "else:\n",
+    "    print(-1)\n",
+    "# 3, 5"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
