--- a/A02_BAEKJOON/B01_Step/_11-20/C13_정렬.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C13_정렬.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "f476aa17",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "from io import StringIO"
    ]
   },
@@ -125,7 +126,6 @@
     "2\n",
     "1''').readline\n",
     "\n",
-    "# 시간초과.\n",
     "n = int(input()) \n",
     "lst = [int(input()) for _ in range(n)]\n",
     "lst.sort()\n",
@@ -135,13 +135,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "77a7438f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# 5\t10989\t 수 정렬하기 3\n",
-    "input = StringIO('''''').readline\n"
+    "sys.stdin = StringIO('''10\n",
+    "5\n",
+    "2\n",
+    "3\n",
+    "1\n",
+    "4\n",
+    "2\n",
+    "3\n",
+    "5\n",
+    "1\n",
+    "7''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "n = int(input())\n",
+    "\n",
+    "# 배열로 카운팅 하는 방식으로 풀이 "
    ]
   },
   {
