--- a/A02_BAEKJOON/B01_Step/_11-20/C13_정렬.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C13_정렬.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "f476aa17",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "e40f89e5",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "43c06dde",
    "metadata": {},
    "outputs": [
@@ -174,73 +174,238 @@
     "input = sys.stdin.readline\n",
     "n = int(input())\n",
     "\n",
+    "num_counter = [0]*10001\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    num_counter[int(input())] += 1\n",
+    "\n",
+    "for n in range(1, 10001):\n",
+    "    for _ in range(num_counter[n]):\n",
+    "        print(n)\n",
     "# 배열로 카운팅 하는 방식으로 풀이 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "05184b13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['9', '6', '5', '3', '1', '0', '0', '0', '0']\n",
+      "965310000\n"
+     ]
+    }
+   ],
    "source": [
     "# 6\t1427\t 소트인사이드\n",
-    "input = StringIO('''''').readline\n"
+    "sys.stdin = StringIO('''500613009''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "num = input()\n",
+    "# print(sorted(num, reverse=True))\n",
+    "nums = [digit for digit in num]\n",
+    "nums.sort(reverse=True)\n",
+    "print(\"\".join(nums))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ee34cd67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -1\n",
+      "1 1\n",
+      "2 2\n",
+      "3 3\n",
+      "3 4\n"
+     ]
+    }
+   ],
    "source": [
     "# 7\t11650\t 좌표 정렬하기\n",
-    "input = StringIO('''''').readline\n"
+    "sys.stdin = StringIO('''5\n",
+    "3 4\n",
+    "1 1\n",
+    "1 -1\n",
+    "2 2\n",
+    "3 3''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "points = [tuple(map(int, input().split())) for _ in range(n)]\n",
+    "points.sort(key=lambda p: (p[0], p[1]))\n",
+    "for tu in points:\n",
+    "    print(tu[0], tu[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "e987e28a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -1\n",
+      "1 2\n",
+      "2 2\n",
+      "3 3\n",
+      "0 4\n"
+     ]
+    }
+   ],
    "source": [
     "# 8\t11651\t 좌표 정렬하기 2\n",
-    "input = StringIO('''''').readline\n"
+    "sys.stdin = StringIO('''5\n",
+    "0 4\n",
+    "1 2\n",
+    "1 -1\n",
+    "2 2\n",
+    "3 3''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "points = [tuple(map(int, input().split())) for _ in range(n)]\n",
+    "points.sort(key=lambda p : (p[1], p[0]))\n",
+    "for x, y in points:\n",
+    "    print(x, y)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "0831fa12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "im\n",
+      "it\n",
+      "no\n",
+      "but\n",
+      "more\n",
+      "wait\n",
+      "wont\n",
+      "yours\n",
+      "cannot\n",
+      "hesitate\n"
+     ]
+    }
+   ],
    "source": [
     "# 9\t1181\t 단어 정렬\n",
-    "input = StringIO('''''').readline\n"
+    "sys.stdin = StringIO('''13\n",
+    "but\n",
+    "i\n",
+    "wont\n",
+    "hesitate\n",
+    "no\n",
+    "more\n",
+    "no\n",
+    "more\n",
+    "it\n",
+    "cannot\n",
+    "wait\n",
+    "im\n",
+    "yours''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "words = {input().rstrip() for _ in range(n)}\n",
+    "words = list(words)\n",
+    "words.sort(key=lambda w: (len(w), w))\n",
+    "for word in words:\n",
+    "    print(word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "9f1ff40a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 Sunyoung\n",
+      "21 Junkyu\n",
+      "21 Dohyun\n"
+     ]
+    }
+   ],
    "source": [
     "# 10\t10814\t 나이순 정렬\n",
-    "input = StringIO('''''')\n"
+    "sys.stdin = StringIO('''3\n",
+    "21 Junkyu\n",
+    "21 Dohyun\n",
+    "20 Sunyoung''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "members = [tuple(input().split()) for _ in range(n)]\n",
+    "members.sort(key=lambda member: (int(member[0])))\n",
+    "for age, name in members:\n",
+    "    print(age, name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "id": "e6eca94e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 0 3 1\n"
+     ]
+    }
+   ],
    "source": [
     "# 11\t18870\t 좌표 압축\n",
-    "input = StringIO('''''')\n"
+    "sys.stdin = StringIO('''5\n",
+    "2 4 -10 4 -9''')\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "from bisect import bisect_left\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "nums = list(map(int, input().split()))\n",
+    "sorted_keys = sorted(set(nums))\n",
+    "\n",
+    "answer = [str(bisect_left(sorted_keys, num)) for num in nums]\n",
+    "print(\" \".join(answer))\n",
+    "\n"
    ]
   }
  ],
