약수 배수 소수

--- a/A02_BAEKJOON/B01_Step/_11-20/C15_약수_배수_소수_2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C15_약수_배수_소수_2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "537a2878",
    "metadata": {},
    "outputs": [
@@ -21,9 +21,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 45000\n",
-      "6 10\n",
-      "13 17\n"
+      "45000\n",
+      "30\n",
+      "221\n"
      ]
     }
    ],
@@ -35,53 +35,193 @@
     "13 17''')\n",
     "\n",
     "import sys\n",
+    "from math import isqrt, prod\n",
     "input = sys.stdin.readline\n",
     "\n",
     "n = int(input())\n",
-    "\n",
     "for _ in range(n):\n",
     "    a, b = map(int, input().split())\n",
+    "    \n",
+    "    first = a\n",
+    "    second = b\n",
+    "\n",
+    "    while b !=0 :\n",
+    "        a, b = b, a%b\n",
+    "    print((first * second) // a)\n",
+    "\n",
+    "    # small = min(a, b)\n",
+    "    # large = max(a, b)\n",
+    "    # common = list([1])\n",
+    "    # for factor in range(2, isqrt(small) + 1):\n",
+    "    #     while small%factor == large%factor == 0:\n",
+    "    #         common.append(factor)\n",
+    "    #         small //= factor\n",
+    "    #         large //= factor\n",
+    "\n",
+    "    # print(small * large * prod(common))\n",
+    "\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9b7b46a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24079\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2\t13241\t 최소공배수"
+    "# 2\t13241\t 최소공배수\n",
+    "sys.stdin = StringIO('''121 199''')\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "a, b = map(int, input().split())\n",
+    "product = a * b\n",
+    "while b!=0:\n",
+    "    a, b = b, a % b\n",
+    "print(product//a)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9fd1188a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31 35\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t1735\t 분수 합"
+    "# 3\t1735\t 분수 합\n",
+    "sys.stdin = StringIO('''2 7\n",
+    "3 5''')\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "from math import gcd\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "fracs = [tuple(map(int, input().split())) for _ in range(2)]\n",
+    "numer = fracs[0][0]*fracs[1][1] + fracs[1][0]*fracs[0][1]\n",
+    "denom = fracs[0][1]*fracs[1][1]\n",
+    "gcd_v = gcd(numer, denom)\n",
+    "print(numer//gcd_v, denom//gcd_v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "acce060d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t2485\t 가로수"
+    "# 4\t2485\t 가로수\n",
+    "sys.stdin = StringIO('''4\n",
+    "1\n",
+    "3\n",
+    "7\n",
+    "13''')\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "from math import gcd\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "start = int(input())\n",
+    "prev = start\n",
+    "terms = set()\n",
+    "for _ in range(n-1):\n",
+    "    position = int(input())\n",
+    "    terms.add(position - prev)\n",
+    "    prev = position\n",
+    "last_p = position\n",
+    "\n",
+    "length_terms = len(terms)\n",
+    "terms_tuple = tuple(terms)\n",
+    "final_gcd = terms_tuple[0]\n",
+    "if len(terms) > 1:\n",
+    "    for i in range(1, len(terms_tuple)):\n",
+    "        final_gcd = gcd(final_gcd, terms_tuple[i])\n",
+    "\n",
+    "print((last_p - start)//final_gcd + 1 - n)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3813aef4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "23\n",
+      "101\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t4134\t 다음 소수"
+    "# 5\t4134\t 다음 소수\n",
+    "sys.stdin = StringIO('''3\n",
+    "6\n",
+    "20\n",
+    "100''')\n",
+    "\n",
+    "import sys\n",
+    "from math import isqrt\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def isprime(num):\n",
+    "    if num == 0 or num == 1 :\n",
+    "        return False\n",
+    "    if num == 2:\n",
+    "        return True\n",
+    "    if num % 2 == 0:\n",
+    "        return False\n",
+    "    for div in range(3, isqrt(num) + 1, 2):\n",
+    "        if num % div == 0:\n",
+    "            return False\n",
+    "    return True \n",
+    "\n",
+    "n = int(input())\n",
+    "for _ in range(n):\n",
+    "    number = int(input())\n",
+    "    while True:\n",
+    "        if isprime(number):\n",
+    "            print(number)\n",
+    "            break\n",
+    "        number += 1\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -89,9 +229,40 @@
    "execution_count": null,
    "id": "bd14781e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t1929\t 소수 구하기"
+    "# 6\t1929\t 소수 구하기\n",
+    "\n",
+    "sys.stdin = StringIO('''3 16''')\n",
+    "\n",
+    "import sys\n",
+    "from math import isqrt\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "start, end = map(int, input().split())\n",
+    "\n",
+    "flag = [True]*(end + 1)\n",
+    "flag[0]=flag[1]=False\n",
+    "\n",
+    "for i in range(2, isqrt(end) + 1):\n",
+    "    if flag[i]:\n",
+    "        for num in range(i*i, end + 1, i):\n",
+    "            flag[num] = False\n",
+    "for check in range(start, end + 1):\n",
+    "    if flag[check]:\n",
+    "        print(check)\n"
    ]
   },
   {
@@ -99,9 +270,55 @@
    "execution_count": null,
    "id": "24ceab45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "3\n",
+      "21\n",
+      "135\n",
+      "1033\n",
+      "8392\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7\t4948\t 베르트랑 공준"
+    "# 7\t4948\t 베르트랑 공준\n",
+    "sys.stdin = StringIO('''1\n",
+    "10\n",
+    "13\n",
+    "100\n",
+    "1000\n",
+    "10000\n",
+    "100000\n",
+    "0''')\n",
+    "\n",
+    "import sys\n",
+    "from math import isqrt\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "max_value = 123456*2\n",
+    "is_prime = [True] * (max_value + 1)\n",
+    "is_prime[0] = is_prime[1] = False\n",
+    "\n",
+    "for i in range(2, isqrt(max_value) + 1):\n",
+    "    if is_prime[i]:\n",
+    "        for div in range(i*i, max_value + 1, i):\n",
+    "            is_prime[div] = False\n",
+    "\n",
+    "prime_count = [0] * (max_value + 1)\n",
+    "for i in range(max_value + 1):\n",
+    "    prime_count[i] = prime_count[i-1] + (1 if is_prime[i] else 0)\n",
+    "\n",
+    "while True :\n",
+    "    num = int(input())\n",
+    "    if num == 0:\n",
+    "        break\n",
+    "    print(prime_count[2*num] - prime_count[num])"
    ]
   },
   {
@@ -111,12 +328,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8\t17103\t 골드바흐 파티션"
+    "# 8\t17103\t 골드바흐 파티션\n",
+    "sys.stdin = StringIO('''5\n",
+    "6\n",
+    "8\n",
+    "10\n",
+    "12\n",
+    "100''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fbeea219",
    "metadata": {},
    "outputs": [],
@@ -127,7 +355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
