--- a/A02_BAEKJOON/B01_Step/_01-10/C09_약수_배수_소수_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_01-10/C09_약수_배수_소수_1.ipynb
@@ -257,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
